--- a/Views/pages/info.html
+++ b/Views/pages/info.html
@@ -30,6 +30,7 @@
     <script src="https://cdn.imac-group.cf/js/jquery-3.4.1.min.js"></script>
     <script src="/quimica/js/sweetjs.js"></script>
     <script src="/quimica/js/popup.js"></script>
+    <script src="/quimica/controller/index.js"></script>
     <div class="container">
       <div class="video-container">
         <iframe
