🍅📮 Checkpoint ./Views/controller.html:8798828/261 ./Views/pages/info.html:8798828/4969

--- a/Views/controller.html
+++ b/Views/controller.html
@@ -39,7 +39,7 @@
         >
       </div>
     </nav>
-    <ul id="slide-out" class="sidenav grey darken-2">
+    <ul id="slide-out" class="sidenav grey lighten-4">
       <li>
         <div class="user-view">
           <a href=""><img class="circle" src="<%=photo%>"/></a>
