--- a/Views/pages/info.html
+++ b/Views/pages/info.html
@@ -3,8 +3,8 @@
   <head>
     <!--Import Google Icon Font-->
     <link
+      href="https://fonts.googleapis.com/icon?family=Material+Icons"
       rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css"
     />
     <!--Import materialize.css-->
     <link
@@ -14,11 +14,7 @@
       media="screen,projection"
     />
     <!--Import animate.css-->
-    <link
-      type="text/css"
-      rel="stylesheet"
-      href="/quimica/css/animate.css"
-    />
+    <link type="text/css" rel="stylesheet" href="/quimica/css/animate.css" />
 
     <!--Let browser know website is optimized for mobile-->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -31,6 +27,9 @@
     <script src="/quimica/js/sweetjs.js"></script>
     <script src="/quimica/js/popup.js"></script>
     <script src="/quimica/controller/index.js"></script>
+    <div class="returning">
+      <i class="material-icons" onclick="window.location = '/mobile'">arrow_back</i>
+    </div>
     <div class="container">
       <div class="video-container">
         <iframe
@@ -63,9 +62,9 @@
           </button>
         `);
       }
-      $('#nsession').click(function(){
+      $("#nsession").click(function() {
         PopupCode();
-      })
+      });
     </script>
   </body>
 </html>
