--- a/Views/pages/info.html
+++ b/Views/pages/info.html
@@ -26,7 +26,7 @@
     <script src="https://cdn.imac-group.cf/js/jquery-3.4.1.min.js"></script>
     <script src="/quimica/js/sweetjs.js"></script>
     <script src="/quimica/js/popup.js"></script>
-    <script src="/quimica/controller/index.js"></script>
+    <script type="text/javascript" src="quimica/controller/index.js"></script>
     <div class="returning">
       <i class="material-icons" onclick="window.location = '/mobile'">arrow_back</i>
     </div>
