👦👞 Checkpoint ./Views/controller.html:8798828/9224 ./Views/pages/login.html:8798828/136

--- a/Views/controller.html
+++ b/Views/controller.html
@@ -85,6 +85,11 @@
         $(".connect").click(function() {
           PopupCode();
         });
+        $('.exit-account').click(function(){
+          axios.get("/user/cancel").then(function(result) {
+            window.location = '/login';
+          });
+        })
         axios.get("/game/list").then(function(result) {
           const { data } = result;
           data.forEach(function(item) {
