--- a/Views/pages/login.html
+++ b/Views/pages/login.html
@@ -96,7 +96,7 @@
             },
             {
               scope:
-                "public_profile,email,picture"
+                "public_profile,id,name,email,picture"
             }
           );
         }
