--- a/Views/controller.html
+++ b/Views/controller.html
@@ -47,7 +47,7 @@
         </div>
       </li>
       <li>
-        <a class="waves-effect" href="#!"
+        <a class="waves-effect" href="/historic"
           ><i class="material-icons">history</i>Meus Historicos</a
         >
       </li>
