🏇⛪️ Checkpoint ./Views/pages/historic.html:8798828/6949 ./Controller/HistoricController.js:8798828/367 ./routes.js:8798828/384 ./Views/pages/login.html:8798828/327 ./public/quimica/js/popup.js:8798828/36 ./Controller/UserController.js:8798828/37

--- a/Views/pages/login.html
+++ b/Views/pages/login.html
@@ -54,7 +54,7 @@
                 if (res.data.code === 2) {
                   fetchUserProfile();
                 } else if (res.data.user !== undefined || !res.data.user) {
-                  // window.location = '/mobile';
+                  localStorage.setItem('user_id',res.data.user.id);
                   PopupUserWithImage(
                     facebookLogout,
                     "Continuar",
@@ -80,7 +80,7 @@
               .post("/user/creator", response)
               .then(res => {
                 if (res.data.code === 4) {
-                  window.location = "/mobile";
+                  // window.location = "/mobile";
                 }
               })
               .catch(err => {
