--- a/Views/pages/historic.html
+++ b/Views/pages/historic.html
@@ -1,65 +1,129 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
-    <title>Histico de <%= response.user.user_name%></title>
-    <!--Import Google Icon Font-->
+    <meta charset="utf-8" />
+    <title>Controller</title>
     <link
       href="https://fonts.googleapis.com/icon?family=Material+Icons"
       rel="stylesheet"
     />
-    <!--Import materialize.css-->
+    <link rel="stylesheet" href="/quimica/css/animate.css" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1"
+    />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link
-      type="text/css"
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css"
-      media="screen,projection"
     />
-    <!--Import animate.css-->
-    <link type="text/css" rel="stylesheet" href="/quimica/css/animate.css" />
-
-    <!--Let browser know website is optimized for mobile-->
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  </head>
-
-  <body class="grey lighten-2" style="color:#43a047;">
-    <!--JavaScript at end of body for optimized loading-->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.3.0/socket.io.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.19.1/axios.js"></script>
     <script src="https://cdn.imac-group.cf/js/jquery-3.4.1.min.js"></script>
-    <script src="/quimica/js/sweetjs.js"></script>
-    <script src="/quimica/js/popup.js"></script>
+    <link
+      rel="shortcut icon"
+      href="https://cdn.imac-group.cf/images/imaf.ico"
+      type="image/x-icon"
+    />
+  </head>
+  <body class="grey lighten-2">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+    <script src="quimica/js/sweetjs.js"></script>
     <script type="text/javascript" src="quimica/controller/index.js"></script>
-    <div class="returning">
-      <i class="material-icons" onclick="window.location = '/mobile'"
-        >arrow_back</i
-      >
-    </div>
-    <div class="container">
-      <div class="video-container">
+    <script type="text/javascript" src="quimica/js/popup.js"></script>
+    <nav>
+      <div class="nav-wrapper grey darken-2">
+        <a href="#" class="brand-logo">AirGames</a>
+        <a href="#" data-target="slide-out" class="sidenav-trigger"
+          ><i class="material-icons">menu</i></a
+        >
       </div>
-      <div class="valign-wrapper">
-        <h5 class="center-align"><%= response%></h5>
-      </div>
-      <div class="valign-wrapper">
-        <p><%= game_description%></p>
-      </div>
-      <div class="button-context"></div>
-    </div>
+    </nav>
+    <ul id="slide-out" class="sidenav grey lighten-4">
+      <li>
+        <div class="user-view">
+          <a href=""><img class="circle"/></a>
+          <a href=""><span class="black-text name"></span></a>
+        </div>
+      </li>
+      <li>
+        <a class="waves-effect" href="/historic"
+          ><i class="material-icons">history</i>Meus Historicos</a
+        >
+      </li>
+      <li>
+        <a class="waves-effect" href="#!"
+          ><i class="material-icons">credit_card</i>Meu Cash:</a
+        >
+      </li>
+    </ul>
+    <div class="container"></div>
     <script>
-      if (localStorage.getItem("session") === null) {
-        $(".button-context").html(`
-          <button id="nsession" class="btn red darken-2">
-            Entre em uma sessao para jogar!
-          </button>
-        `);
-      } else {
-        $(".button-context").html(`
-          <button class="btn green darken-2">
-            Jogar Agora!
-          </button>
-        `);
-      }
-      $("#nsession").click(function() {
-        PopupCode();
+      document.addEventListener("DOMContentLoaded", function() {
+        var elems = document.querySelectorAll(".sidenav");
+        var instances = M.Sidenav.init(elems);
+      });
+      $(document).ready(function() {
+        if (localStorage.getItem("session") === null) {
+          $(".sidenav").html(
+            $(".sidenav").html() +
+              `
+            <li><div class="divider"></div></li>
+            <li>
+              <a class="waves-effect connect" href="#!"
+                ><i class="material-icons">devices</i>Conectar-se na tela</a
+              >
+            </li>
+          `
+          );
+        }
+        $(".sidenav").html(
+            $(".sidenav").html() +
+              `
+            <li><div class="divider"></div></li>
+            <li>
+              <a class="waves-effect exit-account" href="#!"
+                ><i class="material-icons">exit_to_app</i>Sair da Conta</a
+              >
+            </li>
+          `
+          );
+        $(".connect").click(function() {
+          PopupCode();
+        });
+        $('.exit-account').click(function(){
+          axios.get("/user/cancel").then(function(result) {
+            window.location = '/login';
+          });
+        })
+        axios.get("/user/historic"+localStorage.getItem("user_id")).then(function(result) {
+          const { data } = result;
+          data.forEach(function(item) {
+            $('img.circle').attr('src',item.user.user_picture)
+            $(".container").append(`
+              <div class="row">
+                  <div class="col s12 m7">
+                    <div class="card hoverable medium">
+                      <div class="card-image">
+                        <img
+                          src="${item.game_picture}" style="width: 100%; height:100%"
+                        />
+                        <span class="card-title">${item.game_name}</span>
+                      </div>
+                      <div class="card-content">
+                        <p>
+                          ${item.game_description}
+                        </p>
+                      </div>
+                      <div class="card-action">
+                        <a class="blue-text text-darken-2" href="/game/info/${item.game_id}">Jogue agora por apenas R$${item.game_price},00</a>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+            `);
+          });
+        });
       });
     </script>
   </body>
