--- a/Views/pages/historic.html
+++ b/Views/pages/historic.html
@@ -99,36 +99,38 @@
         axios.get("/user/historic/"+localStorage.getItem("user_id")).then(function(result) {
           const { data } = result;
           const { games,historic } = data;
-          games.forEach(function(item) {
-            historic.forEach(function(historics){
+          var date = {};
+          historic.forEach(function(historics){
               const datett = ""+historics.historic_date;
-              const date = hi
-              $('img.circle').attr('src',data.user.user_picture)
-              $('span.name').html(data.user.user_nome)
-              $(".container").append(`
-                  <div class="row">
-                      <div class="col s12 m7">
-                        <div class="card hoverable medium">
-                          <div class="card-image">
-                            <img
-                              src="${item.game_picture}" style="width: 100%; height:100%"
-                            />
-                            <span class="card-title">${item.game_name}</span>
-                          </div>
-                          <div class="card-content">
-                            <p>
-                              ${item.game_description}
-                            </p>
-                          </div>
-                          <div class="card-action">
-                            <a class="blue-text text-darken-2">${date}</a><br>
-                            <a class="blue-text text-darken-2" href="/game/info/${item.game_id}">Jogue agora por apenas R$${item.game_price},00</a>
-                          </div>
+              date[historics.games_game_id]= datett.split('-');
+          });
+          console.log(date);
+          games.forEach(function(item) {
+            $('img.circle').attr('src',data.user.user_picture)
+            $('span.name').html(data.user.user_nome)
+            $(".container").append(`
+                <div class="row">
+                    <div class="col s12 m7">
+                      <div class="card hoverable medium">
+                        <div class="card-image">
+                          <img
+                            src="${item.game_picture}" style="width: 100%; height:100%"
+                          />
+                          <span class="card-title">${item.game_name}</span>
+                        </div>
+                        <div class="card-content">
+                          <p>
+                            ${item.game_description}
+                          </p>
+                        </div>
+                        <div class="card-action">
+                          <a class="blue-text text-darken-2">${date[i][2]}/${date[i][1]}/${date[i][0]}</a><br>
+                          <a class="blue-text text-darken-2" href="/game/info/${item.game_id}">Jogue agora por apenas R$${item.game_price},00</a>
                         </div>
                       </div>
                     </div>
-              `);
-            })
+                  </div>
+            `);
           });
         });
       });
