--- a/Views/pages/historic.html
+++ b/Views/pages/historic.html
@@ -78,8 +78,8 @@
           );
         }
         $(".sidenav").html(
-            $(".sidenav").html() +
-              `
+          $(".sidenav").html() +
+            `
             <li><div class="divider"></div></li>
             <li>
               <a class="waves-effect exit-account" href="#!"
@@ -87,36 +87,33 @@
               >
             </li>
           `
-          );
+        );
         $(".connect").click(function() {
           PopupCode();
         });
-        $('.exit-account').click(function(){
+        $(".exit-account").click(function() {
           axios.get("/user/cancel").then(function(result) {
-            window.location = '/login';
+            window.location = "/login";
           });
-        })
-        axios.get("/user/historic/"+localStorage.getItem("user_id")).then(function(result) {
-          const { data } = result;
-          const { games,historic } = data;
-          var date = {};
-          historic.forEach(function(historics){
-              const datett = ""+historics.historic_date;
-              date[historics.games_game_id]= datett.split('-');
-          });
-          console.log(date[1]);
-          var i = 0;
-          games.forEach(function(item) {
-            i++;
-            $('img.circle').attr('src',data.user.user_picture)
-            $('span.name').html(data.user.user_nome)
-            $(".container").append(`
+        });
+        axios
+          .get("/user/historic/" + localStorage.getItem("user_id"))
+          .then(function(result) {
+            const { data } = result;
+            const { games, historic } = data;
+            var date = {};
+            historic.forEach(function(historics) {
+              const datett = "" + historics.historic_date;
+              date[historics.games_game_id] = datett.split("-");
+              $(".container").append(`
                 <div class="row">
                     <div class="col s12 m7">
                       <div class="card hoverable medium">
                         <div class="card-image">
                           <img
-                            src="${item.game_picture}" style="width: 100%; height:100%"
+                            src="${
+                              item.game_picture
+                            }" style="width: 100%; height:100%"
                           />
                           <span class="card-title">${item.game_name}</span>
                         </div>
@@ -126,15 +123,23 @@
                           </p>
                         </div>
                         <div class="card-action">
-                          <a class="blue-text text-darken-2">${date[i][2]}/${date[i][1]}/${date[i][0]}</a><br>
-                          <a class="blue-text text-darken-2" href="/game/info/${item.game_id}">Jogue agora por apenas R$${item.game_price},00</a>
+                          <a class="blue-text text-darken-2">${
+                            date[item.game_id][2]
+                          }/${date[item.game_id][1]}/${date[item.game_id][0]}</a><br>
+                          <a class="blue-text text-darken-2" href="/game/info/${
+                            item.game_id
+                          }">Jogue agora por apenas R$${item.game_price},00</a>
                         </div>
                       </div>
                     </div>
                   </div>
-            `);
+              `);
+            });
+            games.forEach(function(item) {
+              $("img.circle").attr("src", data.user.user_picture);
+              $("span.name").html(data.user.user_nome);
+            });
           });
-        });
       });
     </script>
   </body>
