--- a/Views/pages/historic.html
+++ b/Views/pages/historic.html
@@ -102,9 +102,15 @@
             const { data } = result;
             const { games, historic } = data;
             var date = {};
+            var game_content = {};
+            games.forEach(function(item) {
+              $("img.circle").attr("src", data.user.user_picture);
+              $("span.name").html(data.user.user_nome);
+              game_content[item.game_id] = item;
+            });
             historic.forEach(function(historics) {
               const datett = "" + historics.historic_date;
-              date[historics.games_game_id] = datett.split("-");
+              const date = datett.split('-');
               $(".container").append(`
                 <div class="row">
                     <div class="col s12 m7">
@@ -112,32 +118,25 @@
                         <div class="card-image">
                           <img
                             src="${
-                              item.game_picture
+                              game_content[historics.games_game_id].game_picture
                             }" style="width: 100%; height:100%"
                           />
-                          <span class="card-title">${item.game_name}</span>
+                          <span class="card-title">${game_content[historics.games_game_id].game_name}</span>
                         </div>
                         <div class="card-content">
                           <p>
-                            ${item.game_description}
+                            ${game_content[historics.games_game_id].game_description}
                           </p>
                         </div>
                         <div class="card-action">
-                          <a class="blue-text text-darken-2">${
-                            date[item.game_id][2]
-                          }/${date[item.game_id][1]}/${date[item.game_id][0]}</a><br>
-                          <a class="blue-text text-darken-2" href="/game/info/${
-                            item.game_id
-                          }">Jogue agora por apenas R$${item.game_price},00</a>
+                          <a class="blue-text text-darken-2">${date[2]}/${date[1]}/${date[0]}</a>
+                          <br/>
+                          <a class="blue-text text-darken-2" href="/game/info/${game_content[historics.games_game_id].game_id}">Jogue agora por apenas R$${game_content[historics.games_game_id].game_price},00</a>
                         </div>
                       </div>
                     </div>
                   </div>
               `);
-            });
-            games.forEach(function(item) {
-              $("img.circle").attr("src", data.user.user_picture);
-              $("span.name").html(data.user.user_nome);
             });
           });
       });
