🍡👝 Checkpoint ./Views/pages/historic.html:8798828/52

--- a/Views/pages/historic.html
+++ b/Views/pages/historic.html
@@ -47,8 +47,8 @@
         </div>
       </li>
       <li>
-        <a class="waves-effect" href="/historic"
-          ><i class="material-icons">history</i>Meus Historicos</a
+        <a class="waves-effect" href="/mobile"
+          ><i class="material-icons">arrow_back</i>Voltar</a
         >
       </li>
       <li>
