--- a/Views/pages/historic.html
+++ b/Views/pages/historic.html
@@ -52,12 +52,10 @@
         >
       </li>
       <li>
-        <a class="waves-effect" href="#!"
-          >
+        <a class="waves-effect" href="#!">
           <i class="material-icons">credit_card</i>
           <div class="cash"></div>
-        </a
-        >
+        </a>
       </li>
     </ul>
     <div class="container"></div>
@@ -103,19 +101,22 @@
           .get("/user/historic/" + localStorage.getItem("user_id"))
           .then(function(result) {
             const { data } = result;
-            const { games, historic } = data;
+            const { games, historic,user } = data;
             var date = {};
+            if (!data) {
+              data = JSON.parse(localStorage.getItem("user_info"));
+            }
             var game_content = {};
-            games.forEach(function(item) {
-              $("img.circle").attr("src", data.user.user_picture);
-              $("span.name").html(data.user.user_nome);
-              $(".cash").html(`Meu cash: <b>${data.user.user_cash}</b>`);
-              game_content[item.game_id] = item;
-            });
-            historic.forEach(function(historics) {
-              const datett = "" + historics.historic_date;
-              const date = datett.split('-');
-              $(".container").append(`
+            if (games) {
+              games.forEach(function(item) {
+                
+              });
+            }
+            if (historic) {
+              historic.forEach(function(historics) {
+                const datett = "" + historics.historic_date;
+                const date = datett.split("-");
+                $(".container").append(`
                 <div class="row">
                     <div class="col s12 m7">
                       <div class="card hoverable medium">
@@ -125,23 +126,37 @@
                               game_content[historics.games_game_id].game_picture
                             }" style="width: 100%; height:100%"
                           />
-                          <span class="card-title">${game_content[historics.games_game_id].game_name}</span>
+                          <span class="card-title">${
+                            game_content[historics.games_game_id].game_name
+                          }</span>
                         </div>
                         <div class="card-content">
                           <p>
-                            ${game_content[historics.games_game_id].game_description}
+                            ${
+                              game_content[historics.games_game_id]
+                                .game_description
+                            }
                           </p>
                         </div>
                         <div class="card-action">
-                          <a class="blue-text text-darken-2">${date[2]}/${date[1]}/${date[0]}</a>
+                          <a class="blue-text text-darken-2">${
+                            date[2]
+                          }/${date[1]}/${date[0]}</a>
                           <br/>
-                          <a class="blue-text text-darken-2" href="/game/info/${game_content[historics.games_game_id].game_id}">Jogue agora por apenas R$${game_content[historics.games_game_id].game_price},00</a>
+                          <a class="blue-text text-darken-2" href="/game/info/${
+                            game_content[historics.games_game_id].game_id
+                          }">Jogue agora por apenas R$${game_content[historics.games_game_id].game_price},00</a>
                         </div>
                       </div>
                     </div>
                   </div>
               `);
-            });
+              });
+            } else {
+              $(".container").append(`
+                <h1>Sem jogo</h1>
+              `);
+            }
           });
       });
     </script>
