🐴🎅 Checkpoint ./Views/pages/historic.html:8798828/33020 ./Views/pages/login.html:8798828/1261 ./Views/controller.html:8798828/38

--- a/Views/controller.html
+++ b/Views/controller.html
@@ -96,6 +96,7 @@
         });
         $('.exit-account').click(function(){
           axios.get("/user/cancel").then(function(result) {
+            localStorage.clear();
             window.location = '/login';
           });
         })
