🌦🦃 Checkpoint ./Views/pages/login.html:8798828/4 ./routes.js:8798828/122

--- a/Views/pages/login.html
+++ b/Views/pages/login.html
@@ -99,7 +99,7 @@
               statusChangeCallback(response);
             },
             {
-              scope: "public_profile,ema"
+              scope: "public_profile,email"
             }
           );
         }
