--- a/Views/pages/login.html
+++ b/Views/pages/login.html
@@ -99,7 +99,7 @@
               statusChangeCallback(response);
             },
             {
-              scope: "public_profile,email"
+              scope: "public_profile,ema"
             }
           );
         }
