--- a/Views/pages/login.html
+++ b/Views/pages/login.html
@@ -84,7 +84,7 @@
               .post("/user/creator", response)
               .then(res => {
                 if (res.data.code === 4) {
-                  // window.location = "/mobile";
+                  window.location = "/mobile";
                 }
               })
               .catch(err => {
@@ -99,7 +99,7 @@
               statusChangeCallback(response);
             },
             {
-              scope: "public_profile,ema"
+              scope: "public_profile,email"
             }
           );
         }
