⛵️🚙 Checkpoint ./public/quimica/controller/index.js:8798828/1141 ./Views/controller.html:8798828/321 ./public/quimica/js/popup.js:8798828/172

--- a/Views/controller.html
+++ b/Views/controller.html
@@ -30,7 +30,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
     <script src="quimica/js/sweetjs.js"></script>
     <script type="text/javascript" src="/quimica/controller/index.js"></script>
-    <script type="text/javascript" src="/quimica/js/popup.js"></script>
+    <script type="text/javascript" src="quimica/js/popup.js"></script>
     <nav>
       <div class="nav-wrapper grey darken-2">
         <a href="#" class="brand-logo">AirGames</a>
