--- a/Views/screen.html
+++ b/Views/screen.html
@@ -20,6 +20,7 @@
     <script src="https://cdn.imac-group.cf/js/jquery-3.4.1.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.3.0/socket.io.js"></script>
+    <script src="https://airgames/quimica/screen/index.js"></script>
     <nav>
       <div class="nav-wrapper">
         <a class="brand-logo" id="code"></a>
@@ -31,35 +32,5 @@
       id="gameviewer"
       src="/quimica/gameviewer.html"
     ></iframe>
-    <script language="javascript">
-      const socket = io('https://airgames.tk');
-      const frame = document.getElementById("gameviewer");
-      socket.emit("join", { type: "screen", connect: true });
-      socket.on("screen-code", function(data) {
-        document.getElementById(
-          "code"
-        ).innerHTML = `<b>YOU CODE: ${data.Code}</b>`;
-      });
-      socket.on("disconnect", function() {
-        
-      });
-      socket.on("player-disconnected", function(data) {
-        alert(`PLAYER ${data.socket} DESCONECTADO`);
-        document.querySelector(`#${data.socket}`).innerHTML = "";
-      });
-      socket.on("new-player", function(data) {
-        console.log(data);
-        $('#nav-mobile').html($('#nav-mobile').html()+`<img id="${data.player.user}" src="${data.player.photo}" style = "width:25px; height:25; border-radius:50%;"`);
-      });
-      socket.on("controllers-ids", function(data) {
-        console.log(data);
-      });
-      function hello() {
-        return socket;
-      }
-      socket.on("controllers-ids", function(data) {
-        console.log(data);
-      });
-    </script>
   </body>
 </html>
