🎰👡 Checkpoint ./Views/pages/historic.html:8798828/60 ./Views/pages/info.html:8798828/255 ./public/quimica/controller/index.js:8798828/140 ./public/quimica/js/popup.js:8798828/32 ./Views/screen.html:8798828/3

--- a/Views/pages/historic.html
+++ b/Views/pages/historic.html
@@ -111,7 +111,7 @@
             games.forEach(function(item) {
               game_content[item.game_id] = item;
             });
-            if (historic) {
+            if (historic !== undefined) {
               historic.forEach(function(historics) {
                 const datett = "" + historics.historic_date;
                 const date = datett.split("-");
