--- a/Views/pages/info.html
+++ b/Views/pages/info.html
@@ -23,11 +23,12 @@
 
   <body class="grey lighten-2" style="color:#43a047;">
     <!--JavaScript at end of body for optimized loading-->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.3.0/socket.io.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
     <script src="https://cdn.imac-group.cf/js/jquery-3.4.1.min.js"></script>
     <script src="/quimica/js/sweetjs.js"></script>
+    <script type="text/javascript" src="/quimica/controller/index.js"></script>
     <script src="/quimica/js/popup.js"></script>
-    <script type="text/javascript" src="quimica/controller/index.js"></script>
     <div class="returning">
       <i class="material-icons" onclick="window.location = '/mobile'">arrow_back</i>
     </div>
