--- a/Views/screen.html
+++ b/Views/screen.html
@@ -20,7 +20,7 @@
     <script src="https://cdn.imac-group.cf/js/jquery-3.4.1.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.3.0/socket.io.js"></script>
-    <script src="https://airgames/quimica/screen/index.js"></script>
+    <script src="https://airgames.tk/quimica/screen/index.js"></script>
     <nav>
       <div class="nav-wrapper">
         <a class="brand-logo" id="code"></a>
