--- a/Views/index.html
+++ b/Views/index.html
@@ -15,18 +15,17 @@
     </style>
   </head>
   <body>
-    <script src="https://cdn.imac-group.cf/js/jquery-3.4.1.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.3.0/socket.io.js"></script>
-    <script src="https://airgames.tk/quimica/screen/index.js"></script>
-    <script src="quimica/js/sweetjs.js"></script>
-    <script type="text/javascript" src="/quimica/controller/index.js"></script>
-    <script type="text/javascript" src="quimica/js/popup.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.19.1/axios.js"></script>
+    <script src="https://cdn.imac-group.cf/js/jquery-3.4.1.min.js"></script>
     <div></div>
     <script>
       const { userAgent } = navigator;
       if(!userAgent.includes('Android')){
         $("div").load("https://airgames.tk/screen");
+        
+        $("body").append("<script src='https://airgames.tk/quimica/screen/index.js'>1&lt;/script");
       } else {
         $("div").load("https://airgames.tk/mobile");
       }
