--- a/Views/controller.html
+++ b/Views/controller.html
@@ -33,8 +33,8 @@
     <script type="text/javascript" src="quimica/js/popup.js"></script>
     <nav>
       <div class="nav-wrapper grey darken-2">
-        <a href="#" class="brand-logo">AirGames</a>
-        <a href="#" data-target="slide-out" class="sidenav-trigger"
+        <a class="brand-logo">AirGames</a>
+        <a data-target="slide-out" class="sidenav-trigger"
           ><i class="material-icons">menu</i></a
         >
       </div>
