--- a/Views/index.html
+++ b/Views/index.html
@@ -7,27 +7,29 @@
       type="image/x-icon"
     />
     <link rel="stylesheet" href="/quimica/css/animate.css" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1"
+    />
+    <script src="https://cdn.imac-group.cf/js/jquery-3.4.1.min.js"></script>
     <style>
       * {
         margin: 0;
         padding: 0;
       }
+      object {
+        width: 100%;
+        height: 100%;
+      }
     </style>
   </head>
   <body>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.3.0/socket.io.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.19.1/axios.js"></script>
-    <script src="https://cdn.imac-group.cf/js/jquery-3.4.1.min.js"></script>
-    <div></div>
     <script>
       const { userAgent } = navigator;
       if(!userAgent.includes('Android')){
-        $("div").load("https://airgames.tk/screen");
-        
-        $("body").append("<script src='https://airgames.tk/quimica/screen/index.js'>1&lt;/script");
+        $("body").html('<object data="https://airgames.tk/screen">');
       } else {
-        $("div").load("https://airgames.tk/mobile");
+        $("body").html('<object data="https://airgames.tk/mobile">');
       }
     </script>
   </body>
