--- a/Views/pages/historic.html
+++ b/Views/pages/historic.html
@@ -111,7 +111,7 @@
             games.forEach(function(item) {
               game_content[item.game_id] = item;
             });
-            if (historic !== undefined) {
+            if (historic !== null) {
               historic.forEach(function(historics) {
                 const datett = "" + historics.historic_date;
                 const date = datett.split("-");
