--- a/Views/screen.html
+++ b/Views/screen.html
@@ -20,7 +20,8 @@
     <script src="https://cdn.imac-group.cf/js/jquery-3.4.1.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.3.0/socket.io.js"></script>
-    <script type="text/javascript" src="/quimica/js/popup.js"></script>
+    <script src="quimica/js/sweetjs.js"></script>
+    <script type="text/javascript" src="https://airgames.tk/quimica/js/popup.js"></script>
     <script src="https://airgames.tk/quimica/screen/index.js"></script>
     <nav>
       <div class="nav-wrapper">
