--- a/Views/controller.html
+++ b/Views/controller.html
@@ -29,6 +29,7 @@
   <body class="grey lighten-2">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
     <script src="quimica/js/sweetjs.js"></script>
+    <script type="text/javascript" src="https://airgames.tk/quimica/js/fullscreen.js"></script>
     <script type="text/javascript" src="/quimica/controller/index.js"></script>
     <script type="text/javascript" src="quimica/js/popup.js"></script>
     <nav>
