--- a/Views/screen.html
+++ b/Views/screen.html
@@ -22,6 +22,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.3.0/socket.io.js"></script>
     <script src="quimica/js/sweetjs.js"></script>
     <script type="text/javascript" src="https://airgames.tk/quimica/js/popup.js"></script>
+    <script type="text/javascript" src="https://airgames.tk/quimica/js/fullscreen.js"></script>
     <script src="https://airgames.tk/quimica/screen/index.js"></script>
     <nav>
       <div class="nav-wrapper">
