🐝📅 Checkpoint ./public/quimica/js/fullscreen.js:8798828/1852 ./Views/screen.html:8798828/281 ./Views/controller.html:8798828/440 ./public/quimica/controller/index.js:8798828/43 ./public/quimica/gamecontroller.html:8798828/576 ./public/quimica/gameviewer.html:8798828/157

--- a/Views/controller.html
+++ b/Views/controller.html
@@ -25,6 +25,14 @@
       href="https://cdn.imac-group.cf/images/imaf.ico"
       type="image/x-icon"
     />
+    <style>
+      *:fullscreen
+      *:-ms-fullscreen,
+      *:-webkit-full-screen,
+      *:-moz-full-screen {
+         overflow: auto !important;
+      }
+    </style>
   </head>
   <body class="grey lighten-2">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
