--- a/Views/screen.html
+++ b/Views/screen.html
@@ -14,6 +14,12 @@
       nav {
         margin-bottom: 2px;
       }
+      *:fullscreen
+      *:-ms-fullscreen,
+      *:-webkit-full-screen,
+      *:-moz-full-screen {
+         overflow: auto !important;
+      }
     </style>
   </head>
   <body>
