--- a/Views/pages/play.html
+++ b/Views/pages/play.html
@@ -1,34 +1,105 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
   <head>
-    <title>AirGames</title>
+    <meta charset="utf-8" />
+    <title>Controller</title>
     <link
-      rel="shortcut icon"
-      href="https://cdn.imac-group.cf/images/imaf.ico"
-      type="image/x-icon"
+      href="https://fonts.googleapis.com/icon?family=Material+Icons"
+      rel="stylesheet"
     />
     <link rel="stylesheet" href="/quimica/css/animate.css" />
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1"
     />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css"
+    />
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.3.0/socket.io.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.19.1/axios.js"></script>
     <script src="https://cdn.imac-group.cf/js/jquery-3.4.1.min.js"></script>
-    <style>
-      * {
-        margin: 0;
-        padding: 0;
-      }
-      object {
-        width: 100%;
-        height: 100%;
-      }
-    </style>
+    <link
+      rel="shortcut icon"
+      href="https://cdn.imac-group.cf/images/imaf.ico"
+      type="image/x-icon"
+    />
   </head>
-  <body>
-    <script type="text/javascript" src="https://airgames.tk/quimica/js/fullscreen.js"></script>
-    <script type="text/javascript" src="/quimica/controller/index.js"></script>
+  <body class="grey lighten-2">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+    <script src="quimica/js/sweetjs.js"></script>
+    <script type="text/javascript" src="quimica/controller/index.js"></script>
     <script type="text/javascript" src="quimica/js/popup.js"></script>
+    <nav>
+      <div class="nav-wrapper grey darken-2">
+        <a href="#" class="brand-logo">AirGames</a>
+        <a href="#" data-target="slide-out" class="sidenav-trigger"
+          ><i class="material-icons">menu</i></a
+        >
+      </div>
+    </nav>
+    <ul id="slide-out" class="sidenav grey lighten-4">
+      <li>
+        <div class="user-view">
+          <a><img class="circle"/></a>
+          <a href=""><span class="black-text name"></span></a>
+        </div>
+      </li>
+      <li>
+        <a class="waves-effect" href="/mobile"
+          ><i class="material-icons">arrow_back</i>Voltar</a
+        >
+      </li>
+      <li>
+        <a class="waves-effect" href="#!">
+          <i class="material-icons">credit_card</i>
+          <div class="cash"></div>
+        </a>
+      </li>
+    </ul>
+    <div class="content" width="10px;" height="10px;" style="padding: 0; margin: 0;"></div>
     <script>
-      $("body").html('<object data="https://airgames.tk/quimica/gamecontroller.html">');
+      document.addEventListener("DOMContentLoaded", function() {
+        var elems = document.querySelectorAll(".sidenav");
+        var instances = M.Sidenav.init(elems);
+      });
+      $(document).ready(function() {
+        if (localStorage.getItem("session") === null) {
+          $(".sidenav").html(
+            $(".sidenav").html() +
+              `
+            <li><div class="divider"></div></li>
+            <li>
+              <a class="waves-effect connect" href="#!"
+                ><i class="material-icons">devices</i>Conectar-se na tela</a
+              >
+            </li>
+          `
+          );
+        }
+        $(".sidenav").html(
+          $(".sidenav").html() +
+            `
+            <li><div class="divider"></div></li>
+            <li>
+              <a class="waves-effect exit-account" href="#!"
+                ><i class="material-icons">exit_to_app</i>Sair da Conta</a
+              >
+            </li>
+          `
+        );
+        $(".connect").click(function() {
+          PopupCode();
+        });
+        $(".exit-account").click(function() {
+          axios.get("/user/cancel").then(function(result) {
+            localStorage.clear();
+            window.location = "/login";
+          });
+        });
+        $(".content").html('<object data="https://airgames.tk/quimica/gamecontroller.html">');
+      });
     </script>
   </body>
 </html>
