--- a/Views/controller.html
+++ b/Views/controller.html
@@ -137,7 +137,7 @@
                   </p>
                 </div>
                 <div class="card-action">
-                  <a class="blue-text text-darken-2" href="/game/info/${item.game_id}">Jogue agora por apenas R$${item.game_price},00</a>
+                  <a class="blue-text text-darken-2" href="/play/game/${item.game_id}">Jogue agora por apenas R$${item.game_price},00</a>
                 </div>
               </div>
             </div>
