🎠🍪 Checkpoint ./public/apis/phaser.min.js:8798828/957133 ./public/apis/gameapi.js:8798828/2291 ./public/js/fullscreen.js:8798828/1628 ./public/js/popup.js:8798828/3120 ./public/js/sweetjs.js:8798828/69700 ./public/js/toastr.min.js:8798828/5251 ./public/css/animete.css:8798828/77907 ./public/css/toastr.min.css:8798828/6454 ./Views/screen.html:8798828/60 ./Views/controller.html:8798828/136 ./Views/pages/play.html:8798828/79

--- a/Views/controller.html
+++ b/Views/controller.html
@@ -7,7 +7,7 @@
       href="https://fonts.googleapis.com/icon?family=Material+Icons"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="/quimica/css/animate.css" />
+    <link rel="stylesheet" href="https://airgames.tk/css/animate.css" />
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1"
@@ -36,10 +36,10 @@
   </head>
   <body class="grey lighten-2">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
-    <script src="quimica/js/sweetjs.js"></script>
-    <script type="text/javascript" src="https://airgames.tk/quimica/js/fullscreen.js"></script>
-    <script type="text/javascript" src="/quimica/controller/index.js"></script>
-    <script type="text/javascript" src="quimica/js/popup.js"></script>
+    <script src="https://airgames.tk/js/sweetjs.js"></script>
+    <script type="text/javascript" src="https://airgames.tk/js/fullscreen.js"></script>
+    <script type="text/javascript" src="https://airgames.tk/controller/index.js"></script>
+    <script type="text/javascript" src="https://airgames.tk/js/popup.js"></script>
     <nav>
       <div class="nav-wrapper grey darken-2">
         <a class="brand-logo">AirGames</a>
