⛹🍬 Checkpoint ./Views/pages/play.html:8798828/40 ./Views/pages/login.html:8798828/64 ./Views/pages/info.html:8798828/108 ./Views/pages/historic.html:8798828/183 ./Controller/GameController.js:8798828/14

--- a/Views/pages/info.html
+++ b/Views/pages/info.html
@@ -15,7 +15,7 @@
       media="screen,projection"
     />
     <!--Import animate.css-->
-    <link type="text/css" rel="stylesheet" href="/quimica/css/animate.css" />
+    <link type="text/css" rel="stylesheet" href="https://airgames.tk/css/animate.css" />
 
     <!--Let browser know website is optimized for mobile-->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -26,9 +26,9 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.3.0/socket.io.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
     <script src="https://cdn.imac-group.cf/js/jquery-3.4.1.min.js"></script>
-    <script src="/quimica/js/sweetjs.js"></script>
-    <script type="text/javascript" src="/quimica/controller/index.js"></script>
-    <script src="/quimica/js/popup.js"></script>
+    <script src="https://airgames.tk/js/sweetjs.js"></script>
+    <script type="text/javascript" src="https://airgames.tk/controller/index.js"></script>
+    <script src="https://airgames.tk/js/popup.js"></script>
     <div class="returning">
       <i class="material-icons" onclick="window.location = '/mobile'">arrow_back</i>
     </div>
