--- a/Views/pages/login.html
+++ b/Views/pages/login.html
@@ -10,13 +10,13 @@
       rel="stylesheet"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" type="text/css" href="quimica/css/animate.css" />
+    <link rel="stylesheet" type="text/css" href="https://airgames.tk/css/animate.css" />
   </head>
   <body>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
     <script src="https://cdn.imac-group.cf/js/jquery-3.4.1.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.19.1/axios.js"></script>
-    <script src="quimica/js/popup.js"></script>
+    <script src="https://airgames.tk/js/popup.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@9"></script>
     <script>
       (function(d, s, id) {
