--- a/Views/pages/play.html
+++ b/Views/pages/play.html
@@ -7,7 +7,7 @@
       href="https://fonts.googleapis.com/icon?family=Material+Icons"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="https://airgames.tk/quimica/css/animate.css" />
+    <link rel="stylesheet" href="https://airgames.tk/css/animate.css" />
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1"
@@ -28,9 +28,9 @@
   </head>
   <body class="grey lighten-2">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
-    <script src="https://airgames.tk/quimica/js/sweetjs.js"></script>
-    <script type="text/javascript" src="https://airgames.tk/quimica/controller/index.js"></script>
-    <script type="text/javascript" src="https://airgames.tk/quimica/js/popup.js"></script>
+    <script src="https://airgames.tk/js/sweetjs.js"></script>
+    <script type="text/javascript" src="https://airgames.tk/controller/index.js"></script>
+    <script type="text/javascript" src="https://airgames.tk/js/popup.js"></script>
     <nav>
       <div class="nav-wrapper grey darken-2">
         <a href="#" class="brand-logo">AirGames</a>
@@ -58,7 +58,7 @@
         >
       </li>
     </ul>
-    <object style="width: 100%; height:100%;" data="https://airgames.tk/quimica/<%= game%>">
+    <object style="width: 100%; height:100%;" data="https://airgames.tk/<%= game%>">
     <script>
       document.addEventListener("DOMContentLoaded", function() {
         var elems = document.querySelectorAll(".sidenav");
